--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 						<div class="contract">
 							<h4>Contribute to YAGT crowdsale</h4>
 							<p>Send your spare ETH to YAGT's contract address</p>
-							<h2 id="copy-input" class="contract-address">0xe4233fD463ac1E565D74367d7dE13e0Cd8A9E887</h2>
+							<h2 id="copy-input" class="contract-address">0x572449af4757eb6f82ef0cba28bfda0b0f57d9f5</h2>
 							<button class="genric-btn primary circle" type="button" id="copy-button" title="Copy to Clipboard">
 								Copy Address
 							</button>
-							<p><span class="rate">1 ETH = 100 YAGT</span><br>You can contribute as much ETH as you want.</p>
-							<p>This is a timeless, non-refundable, but capped crowdsale.<br>The crowdsale will stop after reach <span class="rate">180 ETH</span>.</p>
+							<p><span class="rate">1 ETH = 500 YAGT</span><br>No minimum and maximum ETH contribution.</p>
+							<p>This is a timeless, non-refundable, but capped crowdsale.<br>The crowdsale will stop after reach <span class="rate">200 ETH</span>.</p>
 						</div>
 					</div>
 				</div>
@@ -168,7 +168,7 @@
 									What will you do with that money?
 								</h2>
 								<p>
-									Pay off my debt and start creating values again to other people.
+									Fixing the financial problem and start creating values again to other people.
 								</p>
 							</div>
 						</div>
@@ -220,7 +220,7 @@
 					'#token-txs-10', // Placeholder element
 					'tokenHistory', // Widget type
 					{
-						address: '0x7e55c9c2aa4caf91372f6f8b62f30de0a6db42c1', // keep empty to show all tokens
+						address: '0x572449af4757eb6f82ef0cba28bfda0b0f57d9f5', // keep empty to show all tokens
 						limit: 5, // Number of records to show
 					}
 		
