--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/custom.css">
+
+		<script src="js/vendor/jquery-2.2.4.min.js"></script>
 	</head>
 	<body>
 	<div class="oz-body-wrap">
@@ -93,7 +95,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="#contribute" class="about-area pt-40 pb-40">
+		<section id="contribute" class="about-area pt-40 pb-40">
 			<div class="container">
 				<div class="row">
 					<div class="col-12 text-center">
@@ -199,7 +201,6 @@
 		<!-- End Footer Area -->
 	</div>
 
-		<script src="js/vendor/jquery-2.2.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<script src="js/vendor/bootstrap.min.js"></script>
 		<script src="js/jquery.ajaxchimp.min.js"></script>
