Add version to the CSS

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<link rel="stylesheet" href="css/magnific-popup.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/custom.css">
+		<link rel="stylesheet" href="css/custom.css?version=1.1.0">
 
 		<script src="js/vendor/jquery-2.2.4.min.js"></script>
 	</head>
@@ -106,7 +106,7 @@
 							<button class="genric-btn primary circle" type="button" id="copy-button" title="Copy to Clipboard">
 								Copy Address
 							</button>
-							<p><span class="rate">1 ETH = 500 YAGT</span><br>No minimum and maximum ETH contribution.</p>
+							<p><span class="rate">1 ETH = 100 YAGT</span><br>No minimum and maximum ETH contribution.</p>
 							<p>This is a timeless, non-refundable, but capped crowdsale.<br>The crowdsale will stop after reach <span class="rate">200 ETH</span>.</p>
 						</div>
 					</div>
