--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>You are Awesome and Generous - Crowdsale Token</title>
+	<title>You are Awesome and Generous - A Token Crowdsale</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,300,500" rel="stylesheet">
 		<!--
