Fixing the responsive layout.

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 			<div class="container">
 				<div class="row fullscreen align-items-center justify-content-center">
 					<div class="col-lg-6">
-						<div class="story-content">
-							<h6 class="text-uppercase">A token crowdsale for you to feel awesome and generous</h6>
-							<h1>Your <span class="sp-1">kindness</span> will help a stranger on the Internet <span class="sp-2">great again!</span></h1>
-							<a id="get-started" href="#started" class="genric-btn primary circle arrow">Get started!<span class="lnr lnr-arrow-right"></span></a>
+						<div class="story-content content-banner text-left">
+							<h6 class="text-uppercase">An ICO for a random act of kindness</h6>
+							<h1>If you have spent 0.01 ETH <span class="sp-1">today</span>, <br>you can think this crowdsale <span class="sp-2">next time</span>.</h1>
+							<a id="get-started" href="#started" class="genric-btn primary circle arrow">Let me know!<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
 					<div class="banner-left col-lg-6">
@@ -89,13 +89,13 @@
 					<div class="wrap-cta col-12 text-center">
 						<blockquote>
 							<h2>Would you consider to contribute your ETH<br>for a random person that need help on the Internet?</h2>
-							<h4>This random person spend his last money to deploy the smart contract and hope for luck.</h4>
+							<p>This random person had f**ked up and now he hope for a luck.</p>
 						</blockquote>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section id="contribute" class="about-area pt-40 pb-40">
+		<section id="contribute" class="about-area pb-40">
 			<div class="container">
 				<div class="row">
 					<div class="col-12 text-center">
@@ -107,7 +107,7 @@
 								Copy Address
 							</button>
 							<p><span class="rate">1 ETH = 100 YAGT</span><br>No minimum and maximum ETH contribution.</p>
-							<p>This is a timeless, non-refundable, but capped crowdsale.<br>The crowdsale will stop after reach <span class="rate">200 ETH</span>.</p>
+							<p>This is a timeless, non-refundable, but capped crowdsale.<br>The cap is <span class="rate">200 ETH</span>.</p>
 						</div>
 					</div>
 				</div>
@@ -115,7 +115,7 @@
 		</section>
 		<!-- End Video Area -->
 		<!-- Start about Area -->
-		<section id="faq" class="faq-area pt-100 pb-100 gray-bg">
+		<section id="faq" class="faq-area pt-50 gray-bg">
 			<div class="container">
 				<div class="row text-center title-heading">
 					<div class="col-12">
@@ -130,20 +130,16 @@
 									Why are you doing this?
 								</h2>
 								<p>
-									I were unlucky last year and got financial problem until now. I need to recover from this condition soon. So, why not? This is that kind of effort.
+									I were unlucky last year and got financial problem until now. I need to recover from this condition. So, why not? This is one kind of effort.
 								</p>
 							</div>
 							<div class="single-faq">
 								<h2 class="text-uppercase">
 									What is YAGT? What can I do with it?
 								</h2>
-								<p>
-									YAGT stands for "You are Awesome and Generous Token". YAGT is an ERC20 token, so that you can hold it and transfer it.
-									<br><br>
-									Other than that, I will think of it later. Maybe you can use it in exchange with my service or my next product. Anyway, I'm a web and software developer.
-									<br><br>
-									Just say "hi" to <a href="mailto:yagt.man@gmail.com"><b>yagt.man@gmail.com</b></a>, thus I can send you any update when I have the idea about the use of YAGT. For now, don't expect anything. Thanks for your sincere help.
-								</p>
+								<p>YAGT stands for "You are Awesome and Generous Token". YAGT is an ERC20 token, so that you can hold it and transfer it.</p>
+								<p>Other than that, I will think of it later. Maybe you can use it in exchange with my service or my next product. Anyway, I'm a web and software developer.</p>
+								<p>Just say "hi" to <a href="mailto:yagt.man@gmail.com"><b>yagt.man@gmail.com</b></a>, thus I can send you any update when I have the idea about the use of YAGT. For now, don't expect anything. Thanks for your sincere help.</p>
 							</div>
 						</div>
 					</div>
@@ -189,11 +185,13 @@
 		</section>
 		<!-- End Team Force Area -->
 		<!-- Strat Footer Area -->
-		<footer class="section-gap">
+		<footer>
 			<div class="container">
-				<div class="footer-bottom d-flex justify-content-between align-items-center flex-wrap">
+				<div class="footer-bottom">
+					<p class="footer-text social"><a href="https://twitter.com/yagtoken" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>&nbsp;&nbsp;<a href="https://github.com/yagtoken" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></p>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					<p class="footer-text m-0">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+					<p class="footer-text m-0">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
+					<p class="footer-text">Thanks to <a href="https://colorlib.com" target="_blank">Colorlib</a> for making this template <i class="fa fa-heart-o" aria-hidden="true"></i></p>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</div>
 			</div>
