Change the cta.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<div class="story-content content-banner text-left">
 							<h6 class="text-uppercase">An ICO for a random act of kindness</h6>
 							<h1>If you have spent 0.01 ETH <span class="sp-1">today</span>, <br>you can think this crowdsale <span class="sp-2">next time</span>.</h1>
-							<a id="get-started" href="#started" class="genric-btn primary circle arrow">Let me know!<span class="lnr lnr-arrow-right"></span></a>
+							<a id="get-started" href="#started" class="genric-btn primary circle arrow">Read more<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
 					<div class="banner-left col-lg-6">
