--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<div class="col-lg-6">
 						<div class="story-content content-banner text-left">
 							<h6 class="text-uppercase">An ICO for the awesome people</h6>
-							<h1>If you have spent 0.01 ETH <span class="sp-1">today</span>, <br>you can think this crowdsale <span class="sp-2">next time</span>.</h1>
+							<h1>If you have spent your ETH <span class="sp-1">today</span>, <br>you can think this crowdsale <span class="sp-2">next time</span>.</h1>
 							<a id="get-started" href="#started" class="genric-btn primary circle arrow">Read more<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
@@ -89,7 +89,7 @@
 					<div class="wrap-cta col-12 text-center">
 						<blockquote>
 							<h2>Would you consider to contribute your ETH<br>for a random person that need help on the Internet?</h2>
-							<p>This random person had f**ked up and now he hope for a luck.</p>
+							<p>I deployed this smart contract and hope for a luck.</p>
 						</blockquote>
 					</div>
 				</div>
