Add logo to the website

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="header-wrap">
 					<div class="header-top d-flex justify-content-between align-items-center">
 						<div class="logo">
-							<a href="/" class="typo-brand">YAGT</a>
+							<a href="/"><img src="img/logo.png" alt="YAGT logo" height="50"></a>
 						</div>
 						<div class="main-menubar d-flex align-items-center">
 							<nav class="hide">
@@ -70,13 +70,13 @@
 				<div class="row fullscreen align-items-center justify-content-center">
 					<div class="col-lg-6">
 						<div class="story-content content-banner text-left">
-							<h6 class="text-uppercase">An ICO for the awesome people</h6>
-							<h1>If you have spent your ETH <span class="sp-1">today</span>, <br>you can think this crowdsale <span class="sp-2">next time</span>.</h1>
+							<h6 class="text-uppercase">An altruistic token crowdsale</h6>
+							<h1>If you have spent your ETH <span class="sp-1">today</span>, <br><span class="sp-2">next time</span> you can think this crowdsale.</h1>
 							<a id="get-started" href="#started" class="genric-btn primary circle arrow">Read more<span class="lnr lnr-arrow-right"></span></a>
 						</div>
 					</div>
 					<div class="banner-left col-lg-6">
-						<img class="d-flex mx-auto img-fluid" src="img/header-img.png" alt="">
+						<img class="d-flex mx-auto img-fluid" src="img/cat.jpg" alt="sad cat" height="300">
 					</div>
 				</div>
 			</div>
@@ -130,7 +130,7 @@
 									Why are you doing this?
 								</h2>
 								<p>
-									I were unlucky last year and got financial problem until now. I need to recover from this condition. So, why not? This is one kind of effort.
+									I was unlucky last year and got financial problem until now. I need to recover from this condition. So, why not? This is one kind of effort.
 								</p>
 							</div>
 							<div class="single-faq">
@@ -166,7 +166,7 @@
 									What will you do with that money?
 								</h2>
 								<p>
-									Fixing the financial problem and start creating values again to other people.
+									Fixing the financial problem and start making the awesome product again.
 								</p>
 							</div>
 						</div>
