Changing some copywritings.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									Why are you doing this?
 								</h2>
 								<p>
-									I was unlucky last year and got financial problem until now. I need to recover from this condition. So, why not? This is one kind of effort.
+									I was unlucky last year and got financial problem until now. I'm trying to recover from this condition. So, why not? This is one kind of effort.
 								</p>
 							</div>
 							<div class="single-faq">
@@ -138,8 +138,8 @@
 									What is YAGT? What can I do with it?
 								</h2>
 								<p>YAGT stands for "You are Awesome and Generous Token". YAGT is an ERC20 token, so that you can hold it and transfer it.</p>
-								<p>Other than that, I will think of it later. Maybe you can use it in exchange with my service or my next product. Anyway, I'm a web and software developer.</p>
-								<p>Just say "hi" to <a href="mailto:yagt.man@gmail.com"><b>yagt.man@gmail.com</b></a>, thus I can send you any update when I have the idea about the use of YAGT. For now, don't expect anything. Thanks for your sincere help.</p>
+								<p>Other than that, I don't have any idea yet. Maybe you can use it in exchange with my service or my next product. Anyway, I'm a web and software developer.</p>
+								<p>Just say "hi" to <a href="mailto:yagt.man@gmail.com"><b>yagt.man@gmail.com</b></a>, thus I can send you any update about the purpose of the token. For now, don't expect anything. Thanks for your sincere help.</p>
 							</div>
 						</div>
 					</div>
@@ -152,6 +152,7 @@
 								<p>
 									No, this is 100% real. You are going to help someone on the Internet. I don't think I should put my black and white photo under the team member. How do you know if the team member on other ICOs is real? They are just random people on the Internet too.
 								</p>
+								<p>But, you will know who I am later when the crowdsale reach the cap.</p> 
 							</div>
 							<div class="single-faq">
 								<h2 class="text-uppercase">
@@ -166,7 +167,7 @@
 									What will you do with that money?
 								</h2>
 								<p>
-									Fixing the financial problem and start making the awesome product again.
+									Fixing my financial problem and start making the awesome product again.
 								</p>
 							</div>
 						</div>
